--- a/PROYECTO_1P/ver_perfil.html
+++ b/PROYECTO_1P/ver_perfil.html
@@ -186,13 +186,79 @@
       object-fit: cover;
       background-color: #f5f5f5;
     }
+.portada-perfil {
+  position: relative;
+  height: 300px;
+  background-image: url("public/img/portada.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 15px;
+  overflow: visible; 
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+}
+
+.profile-avatar-fb {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  bottom: -150px; 
+  left: 40px;
+  z-index: 10;
+}
+
+@media (max-width: 768px) {
+  .profile-avatar-fb {
+    width: 110px;
+    height: 110px;
+    bottom: -55px;
+    left: 15px;
+  }
+}
+.usuario-info {
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 8px 16px;
+  border-radius: 12px;
+  display: inline-flex;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
+  transition: all 0.3s ease-in-out;
+}
+
+.usuario-info:hover {
+  transform: scale(1.02);
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.perfil-detalles {
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+body.light-theme .perfil-detalles {
+  background-color: #ffffff;
+  color: #212529;
+}
+
+body.dark-theme .perfil-detalles {
+  background-color: #1e1e1e;
+  color: #f1f1f1;
+}
+
+.perfil-detalles i {
+  min-width: 20px;
+}
+
+
+
   </style>
 </head>
 <body class="dark-theme">
 
+  
 <button id="themeToggle" class="btn btn-outline-light theme-toggle-btn">
   <i class="bi bi-moon-stars-fill"></i>
 </button>
+
+
 
 <div class="modal fade" id="loginModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
   <div class="modal-dialog modal-dialog-centered modal-md">
@@ -216,6 +282,8 @@
           <label for="login_contrasena" class="form-label">Contraseña</label>
           <input type="password" id="login_contrasena" class="form-control">
         </div>
+
+     
         <div class="text-center">
           <button class="btn-get-started" onclick="buscarPerfil()">Ingresar al Perfil</button>
         </div>
@@ -224,42 +292,112 @@
   </div>
 </div>
 
-<div class="container mt-5 d-none" id="perfilResultado">
-  <section class="row-main">
-    <div class="col-lg-8">
-      <div class="text-center mb-5">
-        <section style="margin:0cqmax;">AQUI VA EL LOGO DE FACEAPP</section>
-        <img src="public/img/faceapp.png" alt="Logo FACEAPP" width="100" class="rounded-circle shadow-sm mb-2">
-        <h2 class="fw-bold">Mi Perfil</h2>
-      </div>
-      <div class="text-center mb-4">
-        <img id="perfil_foto" class="profile-avatar shadow" src="" alt="Foto de perfil" />
-        <h3 id="perfil_nombre" class="fw-bold mt-3"></h3>
-        <p id="perfil_departamento" class="text-muted mb-0"></p>
-      </div>
-      <ul class="list-group list-group-flush mb-4">
-        <li class="list-group-item bg-dark text-white"><strong>Apellido:</strong> <span id="perfil_apellido"></span></li>
-        <li class="list-group-item bg-dark text-white"><strong>Edad:</strong> <span id="perfil_edad"></span></li>
-        <li class="list-group-item bg-dark text-white"><strong>Correo:</strong> <span id="perfil_correo"></span></li>
-        <li class="list-group-item bg-dark text-white"><strong>Latitud:</strong> <span id="perfil_lat"></span></li>
-        <li class="list-group-item bg-dark text-white"><strong>Longitud:</strong> <span id="perfil_lon"></span></li>
-        <li class="list-group-item bg-dark text-white"><strong>Usuario:</strong> <span id="perfil_usuario"></span></li>
-      </ul>
-      <div id="mapa" class="rounded shadow" style="height: 300px;"></div>
-    </div>
-    <div class="col-lg-4">
-      <h5 class="text-success">🎉 Cumpleaños del Mes</h5>
-      <ul id="listaCumpleanios" class="list-group mb-4"></ul>
 
-      <h5 class="text-info">👥 También están en <span id="nombreDepto"></span></h5>
-      <ul id="listaDepto" class="list-group"></ul>
+
+
+<nav class="navbar navbar-expand-md navbar-custom fixed-top px-4 py-2 shadow">
+  <a class="navbar-brand d-flex align-items-center" href="#">
+    <img src="public/img/faceapp.png" alt="Logo FACEAPP" width="40" height="40" class="me-2 rounded-circle shadow-sm img-logo" ondblclick="toggleAdminPanel()" />
+    <span class="fw-bold fs-4">FACEAPP</span>
+  </a>
+  <div class="collapse navbar-collapse justify-content-end">
+    <ul class="navbar-nav align-items-center gap-2">
+      <li class="nav-item">
+        <a class="nav-link d-flex align-items-center" href="index.html">
+          <i class="bi bi-house-door-fill me-1 fs-5"></i> Inicio
+        </a>
+      </li>
+      <li class="nav-item">
+        <button class="nav-link btn btn-outline-danger btn-sm rounded-pill d-flex align-items-center px-3" onclick="cerrarSesion()">
+          <i class="bi bi-box-arrow-right me-1 fs-5"></i> Cerrar Sesión
+        </button>
+      </li>
+      <li class="nav-item">
+        <button id="themeToggleNavbar" class="btn btn-outline-light btn-sm rounded-pill px-3">
+          <i class="bi bi-moon-stars-fill"></i>
+        </button>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+
+
+<div class="container-fluid mt-5 d-none" id="perfilResultado" >
+  <div class="row justify-content-center mb-4">
+  <div class="col-10">
+    <div class="portada-perfil position-relative">
+      <img src="public/img/portada.png" class="img-fluid w-100 h-100 object-fit-cover rounded" alt="Portada FACEAPP">
+
+      <img id="perfil_foto" class="profile-avatar-fb rounded-circle border border-4 border-white shadow position-absolute" src="" alt="Foto de perfil">
     </div>
-  </section>
+  </div>
 </div>
+ <br> <br> <br> <br> <br> <br> <br> <br>
+<div class="row justify-content-center">
+  <div class="col-12 ps-5 ">
+    <div class="usuario-info d-flex align-items-center gap-2">
+      <i class="bi bi-person-fill text-success fs-5"></i>
+      <h5 id="perfil_usuario" class="mb-0 fw-semibold text-white">@usuario</h5>
+    </div>
+  </div>
+</div>
+
+
+  <div class="row justify-content-center px-3 px-md-5">
+  <div class="col-lg-8">
+    <div class="card perfil-detalles p-4 shadow-sm rounded-4 mb-4">
+
+      <h4 class="fw-bold mb-4 border-bottom pb-2">
+        <i class="bi bi-info-circle-fill me-2 text-primary"></i> Detalles del Perfil
+      </h4>
+
+      <ul class="list-unstyled mb-4">
+        <li class="mb-3"><i class="bi bi-person-circle me-2 text-success fs-5"></i> <strong>Nombre:</strong> <span id="perfil_nombre"></span></li>
+        <li class="mb-3"><i class="bi bi-person-fill me-2 text-success fs-5"></i> <strong>Apellido:</strong> <span id="perfil_apellido"></span></li>
+        <li class="mb-3"><i class="bi bi-cake2-fill me-2 text-success fs-5"></i> <strong>Edad:</strong> <span id="perfil_edad"></span></li>
+        <li class="mb-3"><i class="bi bi-envelope-at-fill me-2 text-success fs-5"></i> <strong>Correo:</strong> <span id="perfil_correo"></span></li>
+        <li class="mb-3"><i class="bi bi-geo-alt-fill me-2 text-success fs-5"></i> <strong>Departamento:</strong> <span id="perfil_departamento"></span></li>
+        <li class="mb-3"><i class="bi bi-globe-americas me-2 text-success fs-5"></i> <strong>Latitud:</strong> <span id="perfil_lat"></span></li>
+        <li class="mb-3"><i class="bi bi-globe me-2 text-success fs-5"></i> <strong>Longitud:</strong> <span id="perfil_lon"></span></li>
+      </ul>
+
+      <div id="mapa" class="rounded shadow-sm mb-4" style="height: 300px;"></div>
+
+      <div class="text-center">
+        <button class="btn btn-outline-success rounded-pill px-4 shadow-sm">
+          <i class="bi bi-pencil-fill me-2"></i>Editar Datos
+        </button>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="col-lg-4 mt-4 mt-lg-0">
+    <div class="card bg-dark text-white p-4 rounded-4 shadow-sm mb-4">
+      <h5 class="text-success fw-bold mb-3">🎉 Cumpleaños del Mes</h5>
+      <ul id="listaCumpleanios" class="list-group list-group-flush"></ul>
+    </div>
+
+    <div class="card bg-dark text-white p-4 rounded-4 shadow-sm">
+      <h5 class="text-info fw-bold mb-3">👥 También están en <span id="nombreDepto"></span></h5>
+      <ul id="listaDepto" class="list-group list-group-flush"></ul>
+    </div>
+  </div>
+</div>
+
+  
+
+    </div>
+  </div>
+</div>
+ 
+
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>  
 <script>
 function buscarPerfil() {
   const usuario = document.getElementById("login_usuario").value.trim();
@@ -288,6 +426,8 @@ function buscarPerfil() {
     return;
   }
 
+  localStorage.setItem("usuarioActivo", perfil.usuario);
+
   document.getElementById("perfil_nombre").textContent = perfil.nombre;
   document.getElementById("perfil_apellido").textContent = perfil.apellido;
   document.getElementById("perfil_correo").textContent = perfil.correo;
@@ -315,7 +455,14 @@ function buscarPerfil() {
       }
     }
     if (p.departamento === perfil.departamento && p.usuario !== perfil.usuario) {
-      deptoList.innerHTML += `<li class='list-group-item bg-dark text-white'>${p.nombre} ${p.apellido}</li>`;
+    deptoList.innerHTML += `
+<li class='list-group-item bg-dark text-white'>
+  <a href="perfil_readondly.html?usuario=${p.usuario}" class="text-decoration-none text-info fw-semibold">
+    Dcco Nombre
+  </a>
+</li>
+`;
+
     }
   });
 
@@ -333,12 +480,74 @@ function buscarPerfil() {
   if (modalInstance) modalInstance.hide();
 }
 
+//ESTA PARTE ES SOLO PARA PROBAR(DESPUES BORRAR ESTO)
+function cargarPrimerPerfil() {
+  const perfiles = JSON.parse(localStorage.getItem("perfilesUsuario") || "[]");
+
+  if (perfiles.length === 0) {
+    Swal.fire({
+      icon: 'info',
+      title: 'Sin perfiles',
+      text: 'No se encontró ningún perfil guardado.',
+      confirmButtonColor: '#0d6efd'
+    });
+    return;
+  }
+
+  const perfil = perfiles[0]; 
+
+  document.getElementById("perfil_nombre").textContent = perfil.nombre;
+  document.getElementById("perfil_apellido").textContent = perfil.apellido;
+  document.getElementById("perfil_correo").textContent = perfil.correo;
+  document.getElementById("perfil_departamento").textContent = perfil.departamento;
+  document.getElementById("perfil_edad").textContent = perfil.edad;
+  document.getElementById("perfil_lat").textContent = perfil.latitud;
+  document.getElementById("perfil_lon").textContent = perfil.longitud;
+  document.getElementById("perfil_usuario").textContent = perfil.usuario;
+  document.getElementById("perfil_foto").src = perfil.foto;
+
+  document.getElementById("perfilResultado").classList.remove("d-none");
+  document.getElementById("nombreDepto").textContent = perfil.departamento;
+
+
+  const cumpleList = document.getElementById("listaCumpleanios");
+  const deptoList = document.getElementById("listaDepto");
+  cumpleList.innerHTML = "";
+  deptoList.innerHTML = "";
+
+  const hoy = new Date();
+  perfiles.forEach(p => {
+    if (p.fechaNacimiento) {
+      const cumple = new Date(p.fechaNacimiento);
+      if (cumple.getMonth() === hoy.getMonth()) {
+        cumpleList.innerHTML += `<li class='list-group-item bg-dark text-white'>${p.nombre} - ${cumple.getDate()}/${cumple.getMonth() + 1}</li>`;
+      }
+    }
+    if (p.departamento === perfil.departamento && p.usuario !== perfil.usuario) {
+      deptoList.innerHTML += `<li class='list-group-item bg-dark text-white'>${p.nombre} ${p.apellido}</li>`;
+    }
+  });
+
+
+  if (perfil.latitud && perfil.longitud) {
+    const map = L.map('mapa').setView([parseFloat(perfil.latitud), parseFloat(perfil.longitud)], 13);
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      maxZoom: 19,
+      attribution: '&copy; OpenStreetMap contributors'
+    }).addTo(map);
+    L.marker([perfil.latitud, perfil.longitud]).addTo(map).bindPopup('Tu ubicación').openPopup();
+  }
+}
+
+
+
+//EL CODIGO DE ARRIBA SE DEBE BORRAR
+
 window.addEventListener("DOMContentLoaded", () => {
-  const loginModal = new bootstrap.Modal(document.getElementById('loginModal'));
-loginModal.show();
 
 const themeToggleBtn = document.getElementById('themeToggle');
 const themeToggleModalBtn = document.getElementById('themeToggleModal');
+const themeToggleNavbarBtn = document.getElementById('themeToggleNavbar');
 const body = document.body;
 const modalContent = document.getElementById('modalContent');
 const perfilSection = document.getElementById('perfilResultado');
@@ -353,6 +562,10 @@ themeToggleModalBtn.addEventListener('click', () => {
   toggleTheme();
 });
 
+themeToggleNavbarBtn.addEventListener('click', () => {
+  toggleTheme();
+});
+
 function toggleTheme() {
   const currentTheme = body.classList.contains('dark-theme') ? 'dark' : 'light';
   const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
@@ -361,6 +574,10 @@ function toggleTheme() {
 }
 
 function setTheme(theme) {
+  const icon = theme === 'dark'
+    ? '<i class="bi bi-brightness-high-fill"></i>'
+    : '<i class="bi bi-moon-stars-fill"></i>';
+
   if (theme === 'dark') {
     body.classList.add('dark-theme');
     body.classList.remove('light-theme');
@@ -368,8 +585,6 @@ function setTheme(theme) {
     modalContent.classList.remove('light-theme');
     perfilSection?.classList.add('dark-theme');
     perfilSection?.classList.remove('light-theme');
-    themeToggleBtn.innerHTML = '<i class="bi bi-brightness-high-fill"></i>';
-    themeToggleModalBtn.innerHTML = '<i class="bi bi-brightness-high-fill"></i>';
   } else {
     body.classList.add('light-theme');
     body.classList.remove('dark-theme');
@@ -377,12 +592,67 @@ function setTheme(theme) {
     modalContent.classList.remove('dark-theme');
     perfilSection?.classList.add('light-theme');
     perfilSection?.classList.remove('dark-theme');
-    themeToggleBtn.innerHTML = '<i class="bi bi-moon-stars-fill"></i>';
-    themeToggleModalBtn.innerHTML = '<i class="bi bi-moon-stars-fill"></i>';
   }
+
+  if (themeToggleBtn) themeToggleBtn.innerHTML = icon;
+  if (themeToggleModalBtn) themeToggleModalBtn.innerHTML = icon;
+  if (themeToggleNavbarBtn) themeToggleNavbarBtn.innerHTML = icon;
 }
 
+   const usuarioActivo = localStorage.getItem("usuarioActivo");
+  const loginModalEl = document.getElementById('loginModal');
+  const loginModal = bootstrap.Modal.getOrCreateInstance(loginModalEl);
+
+  if (usuarioActivo) {
+    const perfiles = JSON.parse(localStorage.getItem("perfilesUsuario") || "[]");
+    const perfil = perfiles.find(p => p.usuario === usuarioActivo);
+
+    if (perfil) {
+      document.getElementById("perfil_nombre").textContent = perfil.nombre;
+      document.getElementById("perfil_apellido").textContent = perfil.apellido;
+      document.getElementById("perfil_correo").textContent = perfil.correo;
+      document.getElementById("perfil_departamento").textContent = perfil.departamento;
+      document.getElementById("perfil_edad").textContent = perfil.edad;
+      document.getElementById("perfil_lat").textContent = perfil.latitud;
+      document.getElementById("perfil_lon").textContent = perfil.longitud;
+      document.getElementById("perfil_usuario").textContent = perfil.usuario;
+      document.getElementById("perfil_foto").src = perfil.foto;
+      document.getElementById("perfilResultado").classList.remove("d-none");
+      document.getElementById("nombreDepto").textContent = perfil.departamento;
+
+      // Oculta el modal porque ya está logueado
+      loginModal.hide();
+    }
+  } else {
+    // Si no está logueado, muestra el modal
+    loginModal.show();
+  }
+
+  
 });
+
+
+</script>
+
+<script>
+  function cerrarSesion() {
+  Swal.fire({
+    title: '¿Cerrar sesión?',
+    text: 'Se cerrará tu sesión actual.',
+    icon: 'warning',
+    showCancelButton: true,
+    confirmButtonText: 'Sí, cerrar',
+    cancelButtonText: 'Cancelar',
+    confirmButtonColor: '#d33',
+    cancelButtonColor: '#6c757d'
+  }).then((result) => {
+    if (result.isConfirmed) {
+      localStorage.removeItem("usuarioActivo");
+      window.location.href = "index.html";
+    }
+  });
+}
+
 </script>
 </body>
 </html>
