Arreglado perfil_readonly.html

--- a/PROYECTO_1P/ver_perfil.html
+++ b/PROYECTO_1P/ver_perfil.html
@@ -458,7 +458,7 @@ function buscarPerfil() {
 deptoList.innerHTML += `
   <li class='list-group-item bg-dark text-white d-flex align-items-center gap-3'>
     <img src="${p.foto}" alt="${p.nombre}" class="rounded-circle border border-2" width="40" height="40" style="object-fit: cover;">
-    <a href="perfil_readondly.html?usuario=${p.usuario}" class="text-decoration-none text-info fw-semibold">
+    <a href="perfil_readonly.html?usuario=${p.usuario}" class="text-decoration-none text-info fw-semibold">
       ${p.nombre} ${p.apellido}
     </a>
   </li>
