--- a/PROYECTO_1P/index.html
+++ b/PROYECTO_1P/index.html
@@ -160,7 +160,8 @@
 <body>
   <nav class="navbar navbar-expand-md navbar-custom fixed-top px-4 py-2 shadow">
     <a class="navbar-brand d-flex align-items-center" href="#">
-      <img src="public/img/faceapp.png" alt="Logo FACEAPP" width="40" height="40" class="me-2 rounded-circle shadow-sm img-logo"      ondblclick="window.location.href='administrador.html'"  />
+      <img src="public/img/faceapp.png" alt="Logo FACEAPP" width="40" height="40" class="me-2 rounded-circle shadow-sm img-logo"      ondblclick="localStorage.removeItem('usuarioActivo'); window.location.href='administrador.html'"
+  />
       <span class="fw-bold fs-4">FACEAPP</span>
     </a>
     <div class="collapse navbar-collapse justify-content-end">
@@ -225,7 +226,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2025 Ingeniero Joffre Gómez y Adrián Padilla</p>
+    <p>&copy; Colaboradores: Ing. Joffre Gómez e Ing. Adrian Padilla (2025)</p>
     <p>¿Quieres saber más sobre el programador?</p>
     <p>
       <a href="https://www.linkedin.com/in/joffre-esteban-gomez-quinaluisa-969216309/" target="_blank">Joffre Gómez</a> |
